// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewDocButton should render a view button poiting to the doc url with the searchTerm if pressent 1`] = `
<Connect(I18NLink)
  className="btn btn-default btn-xs"
  onClick={[Function]}
  to="/entity/123"
>
  <Connect(DirectionAwareIcon)
    icon="angle-right"
  />
   
  View
</Connect(I18NLink)>
`;

exports[`ViewDocButton should render a view button poiting to the doc url with the searchTerm if pressent 2`] = `
<Connect(I18NLink)
  className="btn btn-default btn-xs"
  onClick={[Function]}
  to="/entity/123?searchTerm=something"
>
  <Connect(DirectionAwareIcon)
    icon="angle-right"
  />
   
  View
</Connect(I18NLink)>
`;
